FIXED: Query window layout.  Now uses divs instead of a table to ensure CodeMirror uses a scrollbar if needed.  Previous solution used JavaScript, but that gives a rather poor resizing experience.

--- a/web/css/query.css
+++ b/web/css/query.css
@@ -1,8 +1,41 @@
-div.prolog-query   { height: 100%; padding: 5px; background-color: #eee; }
-table.prolog-query { width: 100%; height: 100%; }
-table.prolog-query .buttons-right { text-align: right; }
-table.prolog-query textarea.query { width: 100%; height: 100%; box-sizing: border-box; }
-table.prolog-query .prolog-prompt { vertical-align: top; font-weight: bold; }
+div.prolog-query
+{ height: 100%;
+  padding: 5px;
+  background-color: #eee;
+  position: relative
+}
+
+.prolog-query-editor .buttons-left
+{ display: block;
+  position: absolute;
+  bottom: 10px;
+}
+
+.prolog-query-editor .buttons-right
+{ display: block;
+  position: absolute;
+  bottom: 10px;
+  right: 5px;
+}
+
+.prolog-query-editor div.prolog-prompt
+{ position:absolute;
+  top: 5px;
+  left: 10px;
+  heigth: 100%;
+  vertical-align: top;
+  font-weight: bold;
+}
+
+.prolog-query-editor div.query
+{ margin-top: 3px;
+  height: calc(100% - 35px);
+  margin-left: 2em;
+}
+
+.prolog-query-editor div.query-buttons
+{ margin-left: 2em;
+}
 
 span.run-chk-table { margin-right: 5px; color: #777777;}
 span.run-chk-table input { position: relative; top: 2px; }
